# sandbox-lab

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: .env.example  .gitignore  CLAUDE.md  README.md  config.py  dependencies.py  main.py  pyproject.toml  schemas.py  test_boto3_probe.py
app/src/app/: __init__.py  main.py  service.py  storage.py
app/tests/: test_api.py  test_service.py  test_storage.py
tests/: conftest.py  test_api.py
tools/cloudflare-sandbox/: CLAUDE.md  Dockerfile  README.md  architecture.md  decisions.md  package-lock.json  package.json
tools/cloudflare-sandbox/scripts/: cf-sandbox-service.mjs  sandbox-agent.mjs  setup-cloudflare-sandbox.mjs  start-cloudflare-sandbox.mjs
tools/cloudflare-sandbox/scripts/lib/: cloudflare-config.mjs
tools/cloudflare-sandbox/src/: index.ts
tools/cloudflare-sandbox/test/claude/: bootstrap.test.mjs
tools/cloudflare-sandbox/test/codex/: scodex-launcher.test.mjs
tools/cloudflare-sandbox/test/integration/: local-cli.test.mjs  web-app.test.mjs
tools/cloudflare-sandbox/test/unit/: cf-sandbox-service.test.mjs  (+3 more)
tools/setup-docker-sandbox/: README.md  pyproject.toml
tools/setup-docker-sandbox/skills/setup-docker-sandbox-agent/: SKILL.md
tools/setup-docker-sandbox/skills/setup-docker-sandbox-agent/agents/: openai.yaml
tools/setup-docker-sandbox/src/setup_docker_sandbox/: __init__.py  cli.py  docker.py  envfiles.py  manifest.py  models.py  planner.py  start.py
tools/setup-docker-sandbox/tests/: test_cli.py  test_docker.py  test_envfiles.py  test_planner.py  test_start.py
